# rladies-pyrgo

./: .pdm-python  README.md  pyproject.toml  pyrgo-slides.html  pyrgo-slides.qmd  theme.scss
